--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,13 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.HousePricePredictionApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/red_primary</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="android:colorBackground">@color/white</item>
+        <item name="android:colorForeground">@color/black</item>
+        <item name="android:textColor">@color/grey_dark</item>
+        <item name="android:fontFamily">@font/manrope_regular</item>
+
     </style>
 
     <style name="Theme.HousePricePredictionApp" parent="Base.Theme.HousePricePredictionApp" />
