--- a/app/src/main/res/layout/activity_house_selection_sell.xml
+++ b/app/src/main/res/layout/activity_house_selection_sell.xml
@@ -76,7 +76,7 @@
                     />
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/LocationAreaSpinner"
+                    android:id="@+id/locationAreaSpinner"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
