--- a/app/src/main/res/layout/activity_house_selection_buy.xml
+++ b/app/src/main/res/layout/activity_house_selection_buy.xml
@@ -297,7 +297,7 @@
             </LinearLayout>
 
 
-<!--            TODO: Facilities-->
+<!--            Facilities-->
             <LinearLayout
                 android:id="@+id/facilitiesContainer"
                 android:layout_width="match_parent"
