--- a/app/src/main/res/layout/activity_house_selection_sell.xml
+++ b/app/src/main/res/layout/activity_house_selection_sell.xml
@@ -460,6 +460,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number"
+                    android:hint="@string/in_years"
                     />
 
             </LinearLayout>
@@ -584,6 +585,40 @@
         android:textSize="16sp"
         android:paddingVertical="16dp"
         />
+
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/progress_bar_container"
+        android:visibility="visible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="16dp"
+        app:cardBackgroundColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:padding="32dp"
+        >
+
+
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:indicatorColor="@color/red_primary"
+            app:indicatorInset="12dp"
+            app:indicatorSize="64dp"
+            app:trackColor="@color/red_secondary"
+            app:trackCornerRadius="24dp"
+            app:trackThickness="6dp"
+            android:layout_margin="32dp"
+            android:indeterminate="true"
+            />
+
+    </com.google.android.material.card.MaterialCardView>
 
 
 
